--- a/Begin/style.css
+++ b/Begin/style.css
@@ -8,6 +8,8 @@ body {
 img {width: 150px;}
 
 .robot {
+  /*Ændringer her. OBS på rækkefølge giver forskellige resultat*/
+  transform: rotate(45deg) scale(2) translate(100px, 200px)  ;
 
 }
 
