--- a/Begin/style.css
+++ b/Begin/style.css
@@ -1,7 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@900&display=swap');
 
 
-
+:root {
+  --dist:0%;
+  --scale:2;
+  --deg:10deg;
+}
 
 p {
   animation: moveIn 2s linear both;
@@ -13,23 +17,32 @@ p {
     transform: translateX(-325%) scale(1) rotate(0deg);
   }
   100% {
-    transform: translateX(500px) scale(1.5)rotate(10deg);
+    transform: translateX(var(--dist)) scale(var(--scale))rotate(var(--deg));
   }
 }
 
 p:nth-of-type(1) { 
+  --scale:1.75;
+  --dist:80%;
+  --deg:5deg;
   color: white;
 }
 
 p:nth-of-type(2) {
+  --scale:1.5;
+  --dist:30%;
   color: #59C3C3;
 }
 
 p:nth-of-type(3) {
+  --deg: -5deg;
+  --dist: 100%;
   color: #fbacbe;
 }
 
 p:nth-of-type(4) {
+  --scale: 1.9;
+  --deg: 15deg;
   color: #DCF2B0;
 }
 
